--- a/WalletWasabi.Fluent/App.axaml
+++ b/WalletWasabi.Fluent/App.axaml
@@ -29,6 +29,8 @@
     <StyleInclude Source="avares://WalletWasabi.Fluent/Controls/ProgressRingArc.axaml" />
     <StyleInclude Source="avares://WalletWasabi.Fluent/Controls/ProgressRing.axaml" />
     <StyleInclude Source="avares://WalletWasabi.Fluent/Controls/TagControl.axaml" />
+    <StyleInclude Source="avares://WalletWasabi.Fluent/Controls/TagsBoxEditableItemsPresenter.axaml" />
+    <StyleInclude Source="avares://WalletWasabi.Fluent/Controls/TagsBoxReadOnlyItemsPresenter.axaml" />
     <StyleInclude Source="avares://WalletWasabi.Fluent/Controls/TagsBoxTopItemsPresenter.axaml" />
     <StyleInclude Source="avares://WalletWasabi.Fluent/Controls/TagsBox.axaml" />
     <StyleInclude Source="avares://WalletWasabi.Fluent/Controls/NavBarItem.axaml" />
