--- a/WalletWasabi.Fluent/Views/AddWallet/AddWalletPageView.axaml
+++ b/WalletWasabi.Fluent/Views/AddWallet/AddWalletPageView.axaml
@@ -23,7 +23,7 @@
         </ir:AdaptiveBehavior>
       </i:Interaction.Behaviors>
 
-      <UniformGrid Rows="1" HorizontalAlignment="Center">
+      <UniformGrid Rows="4" HorizontalAlignment="Center">
         <UniformGrid.Styles>
           <Style Selector="c|TileButton">
             <Setter Property="Margin" Value="10" />
@@ -31,7 +31,7 @@
           </Style>
 
           <Style Selector="Panel.small c|TileButton">
-            <Setter Property="Width" Value="120" />
+            <!-- <Setter Property="Width" Value="120" /> -->
             <Setter Property="VerticalContentAlignment" Value="Bottom"/>
           </Style>
         </UniformGrid.Styles>
