--- a/WalletWasabi.Fluent/Views/Shell/MainScreen.axaml
+++ b/WalletWasabi.Fluent/Views/Shell/MainScreen.axaml
@@ -71,8 +71,8 @@
           </DockPanel>
 
 
-          <Border CornerRadius="10 0 0 0" BoxShadow="inset 0 0 5 0 #000000" ClipToBounds="True"
-                  IsHitTestVisible="False" Margin="0 0 -5 -5" />
+          <!--<Border CornerRadius="10 0 0 0" BoxShadow="inset 0 0 5 0 #000000" ClipToBounds="True"
+                  IsHitTestVisible="False" Margin="0 0 -5 -5" />-->
 
 
         </Panel>
