--- a/WalletWasabi.Fluent/Views/NavBar/NavBar.axaml
+++ b/WalletWasabi.Fluent/Views/NavBar/NavBar.axaml
@@ -156,7 +156,7 @@
                          Classes.isCoinjoining="{Binding IsCoinJoining}" />
                 <DockPanel>
                   <Button Content="Open"
-                          Command="{Binding $parent[ItemsControl].DataContext.OpenWalletView}"
+                          Command="{Binding $parent[ItemsControl].DataContext.OpenWalletViewCommand}"
                           Margin="12,0,12,0"
                           Classes="plain"
                           VerticalAlignment="Center"
