--- a/WalletWasabi.Fluent/Views/Shell/Dialogs.axaml
+++ b/WalletWasabi.Fluent/Views/Shell/Dialogs.axaml
@@ -76,7 +76,17 @@
               IsCancelEnabled="{Binding CurrentPage.EnableCancel, FallbackValue=False}"
               EnableCancelOnPressed="{Binding CurrentPage.EnableCancelOnPressed, FallbackValue=True}"
               EnableCancelOnEscape="{Binding CurrentPage.EnableCancelOnEscape, FallbackValue=True}"
-              HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+              HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+              IncreasedWidthThreshold="540" IncreasedHeightThreshold="880" FullScreenHeightThreshold="880">
+      <c:Dialog.Styles>
+        <Style Selector="c|Dialog /template/ Panel#PART_Overlay">
+          <Setter Property="Background" Value="{DynamicResource RegionColor}" />
+        </Style>
+        <Style Selector="c|Dialog /template/ Border#PART_Border">
+          <Setter Property="Margin" Value="0" />
+          <Setter Property="CornerRadius" Value="0" />
+        </Style>
+      </c:Dialog.Styles>
       <ContentControl Content="{Binding CurrentPage}" />
     </c:Dialog>
   </Panel>
