--- a/WalletWasabi.Fluent/Controls/TagsBoxReadOnlyItemsPresenter.axaml
+++ b/WalletWasabi.Fluent/Controls/TagsBoxReadOnlyItemsPresenter.axaml
@@ -28,21 +28,18 @@
     <Setter Property="Cursor" Value="IBeam" />
     <Setter Property="Template">
       <ControlTemplate>
-        <ItemsControl Name="PART_ItemsPresenter"
-                      Focusable="False"
-                      Items="{TemplateBinding Items}">
-          <ItemsControl.ItemsPanel>
+        <c:TagsBoxItemsControl Name="PART_ItemsPresenter"
+                               Focusable="False"
+                               Items="{TemplateBinding Items}"
+                               EnableCounter="{TemplateBinding EnableCounter}"
+                               EnableDelete="{TemplateBinding EnableDelete}"
+                               RemoveTagCommand="{TemplateBinding RemoveTagCommand}">
+          <c:TagsBoxItemsControl.ItemsPanel>
             <ItemsPanelTemplate>
               <WrapPanel Orientation="Horizontal" Focusable="False" VerticalAlignment="Center" />
             </ItemsPanelTemplate>
-          </ItemsControl.ItemsPanel>
-          <ItemsControl.ItemTemplate>
-            <DataTemplate>
-              <c:TagControl Content="{Binding .}"
-                            EnableCounter="{Binding $parent[c:TagsBox].EnableCounter}" />
-            </DataTemplate>
-          </ItemsControl.ItemTemplate>
-        </ItemsControl>
+          </c:TagsBoxItemsControl.ItemsPanel>
+        </c:TagsBoxItemsControl>
       </ControlTemplate>
     </Setter>
   </Style>
