--- a/WalletWasabi.Fluent/Controls/TagControl.axaml
+++ b/WalletWasabi.Fluent/Controls/TagControl.axaml
@@ -42,7 +42,7 @@
           </DockPanel>
           <Button Name="PART_DeleteButton"
                   Command="{TemplateBinding RemoveTagCommand}"
-                  CommandParameter="{Binding .}"
+                  CommandParameter="{TemplateBinding Content}"
                   IsVisible="{TemplateBinding EnableDelete}"
                   KeyboardNavigation.IsTabStop="False"
                   Focusable="{TemplateBinding Focusable}">
