--- a/WalletWasabi.Fluent/Views/Wallets/Receive/ReceiveView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Receive/ReceiveView.axaml
@@ -15,7 +15,7 @@
                  EnableCancel="{Binding EnableCancel}"
                  EnableBack="{Binding EnableBack}">
     <DockPanel>
-      <Button DockPanel.Dock="Bottom" Focusable="False" Content="Unused Receive Addresses"
+      <Button DockPanel.Dock="Bottom" Focusable="False" Content="Addresses Awaiting Payment"
               IsVisible="{Binding IsExistingAddressesButtonVisible, FallbackValue=True}"
               Classes="h8 plain activeHyperLink" Command="{Binding ShowExistingAddressesCommand}" Cursor="Hand"
               HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0 0 0 0" />
