Fixes from review

--- a/WalletWasabi.Fluent/Views/Wallets/Home/History/Details/TransactionDetailsView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/History/Details/TransactionDetailsView.axaml
@@ -44,7 +44,7 @@
       <Separator />
 
       <!-- Fee -->
-      <StackPanel IsVisible="{Binding Fee, Converter={x:Static ObjectConverters.IsNotNull}}">
+      <StackPanel IsVisible="{Binding !IsSelfSpend}">
         
         <c:PreviewItem Icon="{StaticResource btc_logo}"
                        Label="Fee"
