Review fee calculation after talk with @lontivero

--- a/WalletWasabi.Fluent/Views/Wallets/Home/History/Details/TransactionDetailsView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/History/Details/TransactionDetailsView.axaml
@@ -44,7 +44,7 @@
       <Separator />
 
       <!-- Fee -->
-      <StackPanel IsVisible="{Binding !IsSelfSpend}">
+      <StackPanel IsVisible="{Binding IsFeeVisible}">
         
         <c:PreviewItem Icon="{StaticResource btc_logo}"
                        Label="Fee"
